# -MewCode-Coding-Agent

./: .gitignore  CLAUDE.md  README.md  checklist.md  pyproject.toml  spec.md  tasks.md
.github/workflows/: ci.yml
docs/plans/: system-optimization-plan.md
docs/reports/: phase0-baseline.md
mewcode/: __main__.py  agent.py  app.py  config.py  permission_dialog.py  plan_dialog.py  session_dialog.py  teammate_tree.py  validator.py
mewcode/context/: __init__.py  manager.py
mewcode/harness/: config_manager.py
mewcode/harness/evolution/: __init__.py  manager.py  (+9 more)
mewcode/hooks/: engine.py
mewcode/mcp/: __init__.py  client.py  manager.py  tool_wrapper.py
mewcode/memory/: session.py
mewcode/permissions/: __init__.py  checker.py  modes.py  sandbox.py
mewcode/scheduler/: store.py
mewcode/teams/: __init__.py  backend_detect.py  coordinator.py  manager.py  models.py  spawn_inprocess.py  spawn_iterm2.py  spawn_tmux.py  transcript.py
mewcode/tools/: agent_tool.py  base.py  edit_file.py  grep.py  load_skill.py
mewcode/workflow/: engine.py
mewcode/worktree/: manager.py
tests/: test_agent.py  test_commands.py  test_config_merge.py  test_context.py  test_context_window.py  test_evolution.py  test_evolution_e2e.py  test_evolution_matcher.py  test_evolution_success.py  test_harness.py  test_hooks.py  test_mcp.py  test_memory.py  test_permissions.py  test_recovery.py  test_replacement_state.py  test_scheduler.py  test_serialization.py  test_skills.py  test_subagent.py  test_teams.py  test_tool_search.py  test_workflow_engine.py  test_worktree.py  verify_subagent.py
