[project]
name = "mewcode"
version = "0.2.0"
description = "A terminal AI coding assistant"
requires-python = ">=3.11"
dependencies = [
    "textual>=2.1.0",
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "mcp>=1.12.0",
    "httpx>=0.27.0",
]

[project.scripts]
mewcode = "mewcode.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mewcode"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
timeout = 60
markers = [
    "integration: requires external processes or platform integration",
    "slow: takes materially longer than the unit-test suite",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Phase 0 keeps the lint gate intentionally low-noise: syntax errors,
# invalid constructs, and undefined names only. Broader style cleanup is
# deferred so the baseline does not require unrelated repository-wide churn.
select = ["E9", "F63", "F7", "F82"]
